src/test/resources/rules/fail/IndentationCheck.java
package rules.fail;

public class IndentationCheck {
    public void method() {
    System.out.println("Tab not used");
    }
}
